@@ -1,10 +1,10 @@
-[manpage_begin uevent n 0.3]
+[manpage_begin uevent n 0.3.1]
 [copyright {2007-2012 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [moddesc   {User events}]
 [titledesc {User events}]
 [category  {Programming tools}]
 [require Tcl 8.4]
-[require uevent [opt 0.3]]
+[require uevent [opt 0.3.1]]
 [require logger]
 [keywords event bind unbind {generate event} hook]
 [see_also hook(n)]
